--- a/index.html
+++ b/index.html
@@ -35,3 +35,12 @@
           </div>
           <div class="mb-3">
             <label for="email" class="form-lab
+              <!-- ...ibiri hejuru byose bya index.html... -->
+
+<footer style="text-align:center; padding:20px;">
+  <a href="signin.html">Sign in</a> |
+  <a href="signup.html">Create account</a>
+</footer>
+</body>
+</html>
+
