--- a/signup.html
+++ b/signup.html
@@ -4,20 +4,68 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Create Account • Les NGANYIRA</title>
+  <style>
+    body{font-family:Arial, sans-serif;background:#f6f7fb;margin:0}
+    .wrap{max-width:460px;margin:40px auto;background:#fff;padding:24px 20px;border-radius:14px;box-shadow:0 6px 20px rgba(0,0,0,.06)}
+    h1{margin:0 0 12px}
+    label{display:block;margin:12px 0 6px;font-weight:600}
+    input{width:100%;padding:12px;border:1px solid #dfe3eb;border-radius:10px}
+    .muted{color:#6b7280;font-size:12px;margin-top:6px}
+    .bar{height:6px;border-radius:6px;background:#e5e7eb;margin-top:6px;overflow:hidden}
+    .bar>span{display:block;height:100%;width:0}
+    .btn{width:100%;padding:12px 14px;border:0;border-radius:10px;background:#111;color:#fff;cursor:pointer;margin-top:14px;font-weight:700}
+    .ghost{background:#fff;border:1px solid #111;color:#111}
+    .actions{display:flex;gap:8px;margin-top:8px}
+    .err{color:#b91c1c;font-size:13px;margin-top:8px;display:none}
+    .ok{color:#065f46;font-size:13px;margin-top:8px;display:none}
+    .pwd-wrap{position:relative}
+    .toggle{position:absolute;right:12px;top:50%;transform:translateY(-50%);cursor:pointer;font-size:12px;color:#374151}
+    a{color:#111}
+  </style>
 </head>
 <body>
-  <h1>Create account</h1>
-  <input id="firstName" placeholder="First name" />
-  <input id="lastName" placeholder="Last name" />
-  <input id="email" type="email" placeholder="Email" />
-  <input id="password" type="password" placeholder="Password" />
-  <button id="btnSignup">Create account</button>
-  <div id="msg"></div>
+  <div class="wrap">
+    <h1>Create account</h1>
+    <p class="muted">Injiza amazina, email, nimero ya telefone, na password ihuye n’amabwiriza.</p>
 
-  <!-- Firebase SDKs -->
+    <label for="firstName">First name</label>
+    <input id="firstName" placeholder="First name" autocomplete="given-name" />
+
+    <label for="lastName">Last name</label>
+    <input id="lastName" placeholder="Last name" autocomplete="family-name" />
+
+    <label for="phone">Phone number</label>
+    <input id="phone" type="tel" placeholder="+1 902 555 0123" autocomplete="tel" />
+
+    <label for="email">Email</label>
+    <input id="email" type="email" placeholder="you@example.com" autocomplete="email" />
+
+    <label for="password">Password</label>
+    <div class="pwd-wrap">
+      <input id="password" type="password" placeholder="••••••••" autocomplete="new-password" />
+      <span class="toggle" id="togglePwd">Show</span>
+    </div>
+    <div class="muted">
+      Password rules: ≥ 8 characters, nibura 1 uppercase, 1 lowercase, 1 number, 1 symbol.
+      <div class="bar"><span id="strengthFill"></span></div>
+    </div>
+
+    <div class="actions">
+      <button class="btn" id="btnSignup">Create account</button>
+      <a class="btn ghost" href="signin.html">Sign in</a>
+    </div>
+
+    <div id="msgErr" class="err"></div>
+    <div id="msgOk" class="ok"></div>
+    <p class="muted" style="margin-top:14px">By continuing, you agree to our Terms & Policies.</p>
+  </div>
+
+  <!-- Firebase SDKs (CDN, compat) -->
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
   <script>
+    // 🔧 Firebase config yawe
     const firebaseConfig = {
       apiKey: "AIzaSyA5su24dQrXZUrsZAtUOTptDbPQ2tT6iig",
       authDomain: "lesnganyira.firebaseapp.com",
@@ -29,20 +77,77 @@
     };
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
+    const db   = firebase.firestore();
 
-    document.getElementById('btnSignup').addEventListener('click', async () => {
-      const firstName = document.getElementById('firstName').value.trim();
-      const lastName = document.getElementById('lastName').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value;
-      try {
-        const { user } = await auth.createUserWithEmailAndPassword(email, password);
-        await user.updateProfile({ displayName: `${firstName} ${lastName}` });
+    const el = (id)=>document.getElementById(id);
+    const email = el('email'), pwd = el('password'), f=el('firstName'), l=el('lastName'), phone=el('phone');
+    const toggle = el('togglePwd'), err=el('msgErr'), ok=el('msgOk'), strengthFill=el('strengthFill');
+
+    function showErr(t){err.textContent=t;err.style.display='block';ok.style.display='none'}
+    function showOk(t){ok.textContent=t;ok.style.display='block';err.style.display='none'}
+    function clearMsgs(){err.style.display='none';ok.style.display='none'}
+
+    toggle.addEventListener('click', ()=>{
+      pwd.type = pwd.type==='password' ? 'text':'password';
+      toggle.textContent = pwd.type==='password' ? 'Show':'Hide';
+    });
+
+    function scorePassword(p){
+      let s=0;
+      if(p.length>=8) s+=25;
+      if(/[a-z]/.test(p) && /[A-Z]/.test(p)) s+=25;
+      if(/\d/.test(p)) s+=25;
+      if(/[^A-Za-z0-9]/.test(p)) s+=25;
+      return Math.min(s,100);
+    }
+    pwd.addEventListener('input', ()=>{
+      const s = scorePassword(pwd.value);
+      strengthFill.style.width = s+'%';
+      strengthFill.style.background = s<50?'#f87171': s<75?'#f59e0b':'#10b981';
+    });
+
+    function validPassword(p){
+      return p.length>=8 && /[a-z]/.test(p) && /[A-Z]/.test(p) && /\d/.test(p) && /[^A-Za-z0-9]/.test(p);
+    }
+    function validPhone(ph){
+      // light check: at least 8 digits
+      const digits = (ph||'').replace(/\D/g,'');
+      return digits.length>=8;
+    }
+
+    document.getElementById('btnSignup').addEventListener('click', async ()=>{
+      clearMsgs();
+      if(!f.value.trim()) return showErr('Injiza first name.');
+      if(!l.value.trim()) return showErr('Injiza last name.');
+      if(!validPhone(phone.value)) return showErr('Shyiramo phone number nyayo.');
+      if(!email.value) return showErr('Injiza email.');
+      if(!validPassword(pwd.value)) return showErr('Password ntiyuzuye amategeko.');
+
+      try{
+        // 1) Create auth user
+        const {user} = await auth.createUserWithEmailAndPassword(email.value.trim(), pwd.value);
+
+        // 2) Save display name
+        await user.updateProfile({ displayName: `${f.value.trim()} ${l.value.trim()}` });
+
+        // 3) Store phone (and names) in Firestore under users/{uid}
+        await db.collection('users').doc(user.uid).set({
+          firstName: f.value.trim(),
+          lastName:  l.value.trim(),
+          phone:     phone.value.trim(),
+          email:     email.value.trim(),
+          createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        }, { merge: true });
+
+        // 4) Send verification email
         await user.sendEmailVerification();
-        sessionStorage.setItem('verifyEmailHint', email);
+
+        // 5) Redirect to verify
+        sessionStorage.setItem('verifyEmailHint', email.value.trim());
+        showOk('Account created. Reba email yawe wemeze konti…');
         location.href = 'verify.html';
-      } catch (e) {
-        document.getElementById('msg').textContent = e.message;
+      }catch(e){
+        showErr(e.message || 'Byanze kwiyandikisha.');
       }
     });
   </script>
